First attempt at comments.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,3 +55,8 @@ layout: default
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+
+<script src="/js/jquery.min.js"></script>
+{% include comments.html element=".post-content" github_account="Joe-Ferrara/Joe-Ferrara.github.io" require_cookie_consent="true" %}
+</body>
+</html>
