Add misc section on home page.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -92,6 +92,7 @@ layout: default
       {%- endfor -%}
     </ul>
 
+    <h1 class="miscellaneous">Miscellaneous</h1>
     <ul class="post-list">
       {%- for post in site.posts -%}
         {%- if post.sub == "none" -%}
